--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,8 @@
         </style>
     </head>
     <body>
-        <header style="text-align:center; font-size:40px;"><br> Konichiwa <br> happy rakshabandhan ☺️<br>
+        <header style="text-align:center; font-size:40px;"><br> Konichiwa <br>
+		all the bestoooo<br>
             
 		<br>  <br></header> 
 
@@ -27,125 +28,114 @@
 
 <!-- begining of pass--->
 <br><br>
-			   31-08-2023 : 5:17AM<br>
-			   how is your health now?<br>
-			   please be sound and safe<br>
-			   31-08-2023 : 7:40PM<br>
-			   its been 3 days<br>
-			   p;ease tell me that you are safe and alright🥺<br>
-			   <br<hr>
-	    30-08-2023: 8:30PM <br>
-			   is everything okay!!!! <br>
-			   please be safe and sound<br>
-	    <br><hr>
-			   30-08-2023: 5/08 AM
-			   <hr><br>
-			   please be safe and sound don't risk always please be careful. don't stay late nights. and see competetion is near so prepare well for it <br>
-			   and exams are also near so try to go on a schedule from weak to hard subs in a pattern. dont rush keep calm stay cool M'Lady<br>
-			   you can do it, do your best, you are the best always 😊<br>
-			   please be careful ok!!! pleasae<br>
-			   p;ease dont let yourself in troubles <br>
-			   <br>
-			   <hr>
-			   28-08-2023: 11/15 PM
-			   <hr
-				   <br>
-
-                    <i>Hey you know what from July 20th I have been listening to the songs of your name and suzume ..
-                         I even wrote suzume song in English verse and I carry it , 
-                         remembering about you that you were so excited to show me the meaning and you said me how it relates to you the night we saw the movie,, 
-                         and I listen to sparkle, nademoniyo, zenzen, dream land turn etc of your name...</i><br>
-                         oh wow you know im listen to those 😃 .. your name, suzume last one, goblin-stay-with me and etc...<br>
-                         yes i do still remeber that beautyful movie night.. 😊,, you stupid we watched till 4 am 😆 then slept. that day im so happy cz you are so happy after the movie😊 <br>
-                         oiii can i see the english version which you wrote if have chace can i listen to it 👉👈<br>
-                         and wait a little we gaonna see so many together soon starting with the movie :<br> "The lady bug and catnoir"😊 <br><br>
-                         <hr>
-                        <i> Hey, I have heard Fujii kaze songs those are amazing and shinunoga ewa was the song I liked the most..</i><br>
-                        👉👈that song i wanna say to you in words 👉👈<br><br>
-                        <i>oi listen to this https://youtu.be/1kehqCLudyg?si=VDmrkwMCwTLVzV4q "Way back Home"... </i><br>
-                        wow this was so amazing hit with words 😭😭😭 it just like our promises this song ponder my heart, i have no words to describe my feeling<br>
-                        <br>
-                        <hr>
-                        <i>Oh and the song for the compitition is give by mam, there were options I have chose "I See The Light" from tangle by the way thanks for your opinion your suggestions were great too 😃</i><br>
-                        wow this song i remember you made us both listen together in rave <br><a href="https://youtu.be/ILRs2r6lcHY?si=_Db0uxroPEsMguQ1">click here</a><br> i still remember after this song we listened to lava you<br><br>
-                        <hr><br>
-                        <i>What songs you listen to these days?</i><br>
-                        Mine :<br>
-                        - My little rockstar playlist<br>
-                        - your name <br>
-                        - indilla and tailor swift love story <br>
-                        - goblin - stay with me <br>
-                        - alesso remedy <br>
-                        - Shingeki gt 2013 <br>
-			  - shininuganei wa<br>
-			   - alan walker <br>
-                        - etc....<br>
-                        <hr>
-                        <br><br>
-                        <i>I just said about the helping you do to any stranger that you have a big heart and you are a gentleman, 
-                            and I said that even I do help sometimes, helping others kind of feels good like internal happiness 
-                            when see others smile and if the reason is "I" self .. 😊😁</i><br>
-                            arigato 😊 <br> i know youre a wonder women my super hero <br> help isn't bad but becareful cz its WB<br>be care and be safe my hero, i can't imagine a world without you<br><br><hr>
-                            <i>Looks like you really had a bad day , your luck was not so good 😅 it happens, so now relax .. 
-                                and make sure like this situation must not occur, if your health not well then skip college and make some (1,2) 
-                                reliable friends that who will help you out when you absent or if you get in trouble, 
-                                we all need someone at time like this, but don't blind trust anyone 😐 </i><br>
-                                yes it's a pretty adventurus day, and sure i'll definitely skip college if my halth not well<br>
-                                😅 friends in class ... 😅😅😅 <br> you know what most seeing me like a badass scilent character, not only from my class a little few other class students also stole my number <br>
-                                😑 blocking others is geting a job be like to me they are annoying<br>
-                                😑😑😑 few asking me, do i use kajal(black eyelash liner) , 😑😑😑 even few female teachers also from lab and few <br>
-                                and they even asking me where i shaped my eye-brows 😑😑😑<br> annoying 😑😑😑 <br>when i said this to amma she laughing loudly 😑😑😑<br>
-                                😑😑😑<br>😑😑😑<br>😑😑😑<br>are you laughing 😑😑😑 <br>😑😑😑<br><br>
-                                <i>And make sure you always carry your bag in it wallet, phone, charger, raincoat, bandage and necessary things should be there with you in times.. </i><br>
-                                --- yes captain, sure ill keep them in my bag <br> as of your order highness<br><br>
-
-                                  <i> And most importantly you should be aware on whether your are , don't de so careless 😑</i> <br>
-                                  sure definitely, 😑 im not careless 😑😑 its adventure only 😑😑😑<br>bla bla bla😝😝😝<br><br>
-                                  <br>
-                                  <i> please don't do things this way don't care about others affairs you focus on yourself now..</i><br>
-                                  sure ill follow as you say, and the previous is just me feel low at that time after seeing that guy crying alone and rest you know...<br>
-                                  but now im saying you that ill try to distance myself from this like this ill try to defend them before they reach me<br><br>
-                                  <i> If someone needs help then do help but if that harming you and getting you in trouble then you better avoid it..</i><br>
-                                  yesss sure definitely i'll keep honor of your words i'll surely follow them<br>as you said ill definitely think about it before i enter<br><br>
-                                 <br> <i>🥺 Senpai please listen to me, this my request... </i><br>
-                                 --- sure Maa i always listen to you, you dont need to request just say me to follow, i'll<br><br>
-                                 🙄 nothing is free right   👉👈 im asking you straight 🙄 that... that.. for me to wear....<br>
-                                 👉👈 you still did't said me about the ribbon<br>
-                                  👉👈 can you please think of it okay 🙄<br><br><br>
-                                  <hr>
-                                  <i>And about the bath thing do follow that to ... Oo don't bath in hot water instead do with normal temperature water.</i><br>
-                                  sure definitely, i'll bath with medium temperature water only and i dont allow my hair to get wet<br>
-                                  i'll follow to drinking also hot water<br> and you know i took that steel-bottle in july i forgot to say you<br><br>
-                                  <i>Ok I hope you will follow each of the line 😊</i><br>
-                                  yes maa i always listen to you and follow your words<br>don't forget im your idiot 😊<br>
-                                  <br>
-                                  <br>
-                                  oiii 👉👈 think of that ribbon okay 🙄<br>
-                                  no need to rush, just a little think when you free<br>
-                                  take your time ill wait<br><br><br>
-                                  <i>Now how is your health?</i><br>
-                                  yess now it feeling better , just this cough and nose flow a little irritating rest im well<br>
-                                  <br>and your health also fine now, be healthy watermelon 😋😋😋<br>
-                                  keep drinking hot water at morning if have chance add ginger it will help your throat and indirectly help you from m_cycle distraction on mind at competition time<br>
-                                  do your best you are the best my sweet potato😊<br<br><br>
-                                  LYSM <br>😑stupid don't stay awake till midnight sleep early<br> else another man inside me comes out you know how creepy weird danger he is 😑<br> better for you sleep early else,... i'll ... you....😋😋😋<br>
-                                  so better let this weird stay in hyberbation<br>
-                                  <br><hr>
-                                  alysm<br>
-                                  turn left <br>
-                                  good night<br><br>
-                                  it's 11:30 i also going to sleep now<br><br><br>
-                                  🧐 why are you still here go and sleep<br><br>
 
 
+<i>I know it's been 3 days sorry I don't always get phone.. they are strict with me .. to much rules to follow..🥺 please don't worry I am fine I will be fine 😊 I'm ur strong girl</i>
+<br>
+please be safe, -_- why you saying sorry you stupid, <br> oii listen dont do any risks now i have come to know the access to phone is limited so i understood <br> and please be safe <br> my good good strong Girl<br>my cute potato<hr>
+<br>
+<i>Oh yes even I also listen to goblin stay with me, there is even a suprise related to this 
+Yes yes I will sing but I I get chance then only 😅</i><br>
+🤩🤩🤩🤩🤩🤩<br>
+wow im waiting for the surprise <br>
+😁😁😁😁😁😁<br>
+<br><br>
+<i>Oh I don't know the English verse of shinunoga</i><br>
+👉👈 i'll try it <br><br>
+<i>Yup ur my way back home hehe!</i><br>
+ 💝<br><br>
+<i>Oi my song change from I see light tooooo whole new world from Aladin.. listen to it it's nice ...</i><br>
+ohh what that person thinking about song chage.. baah!!<br>
+now im not gonna listen to it im only wanna listen in your voice i'll wait for it<br>
+do your best in competition <br>
+all the best<br>
+you are the best 💝<br><hr><br>
+<i>Wow nice playlist you have got
+Remedy song is nice 
+</i>
+Arigato<br>
+its for my remedy, isn't it<br><br>
+<i>Yes I will be save</i><br>
+🙄 even still please be asafe okay!!!<br><br>
+<i>Ouch that line hits "I can't imagine a world without you"</i><br>
+cz the always straight from the bottom of my heart<br><br>
+<i>😂Hehehaha okay so you preety boy 😅😂</i><br>
+it feel so adorable and cute 👉👈, only when you call this way<br>
+but the rest from college and train annoying a lot😑😑😑<br><br>
+<i>Oi noo .. no adventures like that ok! Don't be careless 😑 and definitely follow what I said .. 
+    and focus on yourself not in others.. keep upgrading yourself</i><br>
+    i'll definitely follow what you said, im not gonna do anymore adventures like this. and as i said im surely listen to you<br>
+    i'll surely upgrade myself greater and i'll try mybest to focus on myself only <br>
+    im sure and listen to you maa😊 I always...<br><br>
+    <i>Yess I will definitely give you ribbon Frist I will make the same one from your name, 
+        I will make by thread binding... And around March😊 I will send you 😅 wait ok </i><br>
+        😳😳😳😳😳<br>
+        really 😳😳😳<br>
+        in march 😳😳 <br> this really passed into my heart<br>i'll wait definitely for it<br>
+        i'll wear it daily to where ever i go, i'll always keep it with me😁😁<br><br>
+        <i>And yes happy rakshabandhan is a day to make a bond stronger where a boy gets a responsibility to protect his sister, girl etc </i><br>
+        yess it is!!<br><br>
+        <br>
+        <i>Ok so good night and advance good morning
+Turn right you and sleep.. 🕊️<br>
+Today a ladybug 🐞 sat on my book it was playing with me 😄 in class.. bye see ya soon cat 😁</i><br>
+oooo wow, a ladybug😆😆 adorable, im gonna call tesla cat then 😁<br>
+My Bug lady 🥰<br>
 
-
+<br><br><hr>
+<i>How is your progress going on ... On your studies , your language English, Hindi... And your fitness.... 
+    Prepare yourself for every situation worst or best no matter what...
+     Everything always have a solution, to the key is ourselves only </i>
+     <br>
+more or less everything is going fine<br>
+and my studies they are well, 3 of my teachers started enouchourage me to excel in my skills<br>
+language  im practicing 3 times in a week due to college work and schedules they left me no time cz, i changed from electronics to computers in 2nd year so i need to came up with all 1st year in just a month 😅😅<br>
+my fitness 😎😎😎 im the strongest 😊 , wait to see the 6packs😎<br><br>
+yess i understood and im gonna prepare myself in every situation, no matter what im gonna give up <br>
+<br> you know what you said me to socialize 🙄<br>
+i tried but it endup trash in my mind, in beginning i though to make friends in class and in college<br>
+and you know it right as i said im not gonna friend with a girl or not even gaonna talk, im standing well <br>
+while i friends with few boys in my class when im i sit with them in a conversation, in a row of 3 days i didnt listen a good word from their mouth<br>
+all they talking bad about everygirl or even about female teachers<br> i left the group then that movement <br>
+i took solo leveling myself in college that mean im a team myself😅<br>
+and hey you know i only found one person from another class his name is "harsha" a good person he observed me in train that day<br>
+yesterday ha came to talk to me and he is the only one i found seeing and respecting girls as own sisters, he is an introvert too😅<br>
+but sometimes(rarely) he getting bullied, now that person and i got to be friends but he is from another department in college and we use to talk so rare 😅 introverts😅<br>
+but this world outside is so trash like, even more worse that trash, no-one is trustable, no-one is loyal most is filled with trash in mind and mostly chance takers to ward females,
+ i guess you understand what trash im saying about<br> and afterall i guess its better for me to stay scilent rather that try to being friends<br>
+ huh!! i may not a fully introvert, but now i choosed to be anti-social whatever it is, its been 2 days i opened my mouth to talk😅<br>
+ going to college study coming the same way without noice is so peaceful. its feeling so well when minding self<br>
+ but the outside trash before maintaining afairs they can't even thinking of their parents and they even trying to drag innocents into it<br>
+ this is the only reason i choosed mainly to be anti-social<br><br>
+ im heartfully saying my thank to god for making you, from tommorow with health and safety im gonna add my thanks in the fasting in every saturday🥰<br>
+be safe and mindful, this outside world fully rotten<br> when you going outside even with parents stay concious and be aware the trash outside is so cursed<br>
+<br>afterall being anti-social not gonna effect my communicatins skills, cz the 3 teachers and the friend in train i may prace good communication with their help<br>
+and now im gonna enter another level in learning bengali <br> ushhh!!! its a surprise<br><br>
+<br><br>
+so tomorrow is competition right <br>
+all the best my potato do your best you are the best , stay calm and do your best<br>
+for now good night dont stay wake up all night okay!! sleep well and earlly<br>
+turn left and take me close 🙄... close to your heart beat... <br>pamper me thses trash i sawn in 3 days scareed me out<br>
+but im not gonna stop, i'll keep moving forward toward our goals and dreams<br>
+im not gonna give up no matter what and how the world is im not gonna step back myself not gonna break my promises or even my words<br>
+im gonna do even more better in study on further and update myself<br>
+i believe, <br> simply as like every day, im gonna wake up pray, college home study pray and sleep.<br>
+im not gonna give up no matter how hard it is im gonna stand on my every words<br><br><hr>
+good night/good morning <br>
+you are the best<br>
+dont forget 10 bottles of water , eat well and sleeo 7+ <br>
+if you try to stay awake till midningth, dont forget this ghost is not innocent 😑, this black cat gonna remember as like you remember this "😑" and then...... <br>
+😋😋😋😋😋😋😋😋😋😋😋😋<br>
+so i guess you gonna choose to sleep early right <br><br>
+else🤨🤨🤨🤨... i...😋😋😋😋<br><br><hr>good night my sweet potato😋<br><br> all the very best for your competetion do your best you are the best<br><br>
+im always your idiot/dorky only no-one gonna change it<br>
+ALYSM TC 🍯<br><br><br>
 
 <!--- end of pass--->
 
     <br><div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8"  ><span   >WANNA SAY SOMETHING TO <br> YATO <br> <b>click here</b> </span></a> </div>  
     <br><div class="mypap3"><a href="https://forms.gle/BYcWLsfzv9LyCBFRA" ><span   ><b>SENT A PICTURE click here</b> </span></a> </div><br><br>
- <br><div class="mypap3"><a href="https://youtu.be/vWK7m6w7yc4?si=92zQAE6Zp6QRxnDG" ><span   ><b>Something.. :) click here</b> </span></a> </div><br><br>
+ <br><br><br><br>
 
 			   <!--- end of sheets ------>
 
