--- a/index2.html
+++ b/index2.html
@@ -130,7 +130,19 @@ so i guess you gonna choose to sleep early right <br><br>
 else🤨🤨🤨🤨... i...😋😋😋😋<br><br><hr>good night my sweet potato😋<br><br> all the very best for your competetion do your best you are the best<br><br>
 im always your idiot/dorky only no-one gonna change it<br>
 ALYSM TC 🍯<br><br><br>
-
+<b>2-09-2023: 8:40pm</b><br>
+			   <b>oii when you send me something in 94...69 <br> let me know from here cz your and penom numbers only it have and i open it once in a week</b> <br>
+			   so from next time after sending let me know here<br>
+			   the song was so amazing 🤩🤩🤩🤩🤩🤩<br>
+			   soooo amazing <br>
+			   and i get it why you said like "at march" my tubelight starts working<br>
+			   daijobu<br>
+			   now im trying to forget the term, i'll receive it as you imagine 😊 😊 😊 <br><br>
+			   Tace care be safe<br>
+			   LYSM<br>
+			   good night sleep well<br>
+			   after you are free tell me how was your day and your competetion <br>
+			   oiii then start your preparation for exam its september okay!!!<br><br><br>
 <!--- end of pass--->
 
     <br><div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8"  ><span   >WANNA SAY SOMETHING TO <br> YATO <br> <b>click here</b> </span></a> </div>  
