--- a/index2.html
+++ b/index2.html
@@ -131,9 +131,9 @@ else🤨🤨🤨🤨... i...😋😋😋😋<br><br><hr>good night my sweet pota
 im always your idiot/dorky only no-one gonna change it<br>
 ALYSM TC 🍯<br><br><br>
 <b>2-09-2023: 8:40pm</b><br>
-			   <b>oii when you send me something in 94...69 <br> let me know from here cz your and penom numbers only it have and i open it once in a week</b> <br>
+			   <b>oii when you send me something in whaapp 94...69 <br> let me know from here cz your and penom numbers only it have and i open it once in a week</b> <br>
 			   so from next time after sending let me know here<br>
-			   the song was so amazing 🤩🤩🤩🤩🤩🤩<br>
+			   the song was so amazing 🤩🤩🤩🤩🤩🤩<br>the rithm of the feel that took me goose bumps<br> its magical
 			   soooo amazing <br>
 			   and i get it why you said like "at march" my tubelight starts working<br>
 			   daijobu<br>
