--- a/index2.html
+++ b/index2.html
@@ -133,7 +133,7 @@ ALYSM TC 🍯<br><br><br>
 <b>2-09-2023: 8:40pm</b><br>
 			   <b>oii when you send me something in whaapp 94...69 <br> let me know from here cz your and penom numbers only it have and i open it once in a week</b> <br>
 			   so from next time after sending let me know here<br>
-			   the song was so amazing 🤩🤩🤩🤩🤩🤩<br>the rithm of the feel that took me goose bumps<br> its magical
+			   the song was so amazing 🤩🤩🤩🤩🤩🤩<br>the rithm of the feel that took me goose bumps<br> its magical, soo beautiful and plesant to hear..
 			   soooo amazing <br>
 			   and i get it why you said like "at march" my tubelight starts working<br>
 			   daijobu<br>
