--- a/index2.html
+++ b/index2.html
@@ -143,6 +143,37 @@ ALYSM TC 🍯<br><br><br>
 			   good night sleep well<br>
 			   after you are free tell me how was your day and your competetion <br>
 			   oiii then start your preparation for exam its september okay!!!<br><br><br>
+
+               <hr>
+               <br>
+               3-09-2023 : 12:27PM<br>
+               actually  👉👈 im missing your "BAKA!!" <br>
+🙄 so now im gonna do a little stupid thing <br>
+so then i can get it right <br>😅😆😁
+<br>
+<img src="waa.png"/><br>
+<img src="waa2.png"/><br>
+<img src="waa3.png"/><br><hr>
+<img src="dinst1.png"/><br>
+<img src="dinst2.png"/><br>
+<hr>
+<img src="dinst.png"/><br>
+<img src="kinst1.png"/><br>
+<hr>
+<img src="kinst.png"/><br><hr>      
+<br>
+🤫🤫🤫🤫<br>
+im just putting here casully 😝😝😝 <br>    
+i don't wanna overthink so im putting here 💁‍♂️<br>
+now im going to prepare well to my exams ,, 😊 and you also try to prepare well for your exams<br>
+so lets start study i also have exams in septemeber end<br>
+lets stydy well 😊 okay<br><br>   
+actually  👉👈 im missing your "BAKA!!" <br>
+🙄 for this stupid 
+
+<br><br><hr>
+
+
 <!--- end of pass--->
 
     <br><div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8"  ><span   >WANNA SAY SOMETHING TO <br> YATO <br> <b>click here</b> </span></a> </div>  
