--- a/index2.html
+++ b/index2.html
@@ -160,15 +160,29 @@ so then i can get it right <br>😅😆😁
 <img src="dinst.png"/><br>
 <img src="kinst1.png"/><br>
 <hr>
-<img src="kinst.png"/><br><hr>      
+<img src="kinst.png"/><br>
+without permission im not gonna open any
+<hr>      
 <br>
 🤫🤫🤫🤫<br>
 im just putting here casully 😝😝😝 <br>    
 i don't wanna overthink so im putting here 💁‍♂️<br>
 now im going to prepare well to my exams ,, 😊 and you also try to prepare well for your exams<br>
 so lets start study i also have exams in septemeber end<br>
-lets stydy well 😊 okay<br><br>   
+lets stydy well 😊 okay<br><br> 
+if baka not possible <br>
+ a choclate/watermelon/milkshake 24h k or 12h k  is fine i'll adjust with that😇<br><br><br>
 
+ <i>hos</i>the <i>ps</i>il <br>
+ k<br>
+ nda<br>
+ <i>sav</i>ali<br>
+ <i>a</i>er <i>ni</i>em <br>
+ only🤨🤨<br><hr>
+ TC LYSM<br><br>
+
+ 👉👈 Gomen 🙄<br>
+ if i did any uncomfortable<br>
 
 <br><br><hr>
 
