--- a/index2.html
+++ b/index2.html
@@ -155,6 +155,9 @@ so then i can get it right <br>😅😆😁
 <img src="waa2.png"/><br>
 <img src="waa3.png"/><br><hr>
 <img src="dinst1.png"/><br>
+im didn't allowed to open/use myself .. cz before that day(july 17) i said you there a treasure hunt like game for you. 
+so i thought to keep it that way for you to play😁😁.. 
+so you can play it after you got your phone, untill it will be there that way 😁 so dont rush, just as me my game also know how to wait😉 <br><br>
 <img src="dinst2.png"/><br>
 <hr>
 <img src="dinst.png"/><br>
