--- a/index2.html
+++ b/index2.html
@@ -160,7 +160,7 @@ so i thought to keep it that way for you to play😁😁..
 so you can play it after you got your phone, untill it will be there that way 😁 so dont rush, just as me my game also know how to wait😉 <br><br>
 <img src="dinst2.png"/><br>
 			   but how im gonna reply this varu_n60555<br> 😅 he asked for a study resouce website(which i send you in march - that contain programming learning stuff) two weeks ago i saw it today <br>
-			   😅<br> <a href="https://mysource0.github.io/resources" class="mypap3" > click here to see </a><br>
+			   😅<br> <br><br><br><a href="https://mysource0.github.io/resources" class="mypap3" > click here to see </a><br><br><br>
 			   ... huh!! i have not got any time to create this block when asked me last time, whether im using or not today is sunday do i woke up at 8am exercise and freshu up , ate<br>
 			   then sit to learned this <b>image tabs</b> in html and practiced a while still images not perfectly visible , sorry for that next time i'll try to learn some advance and use <br>
 			   <br>
