--- a/index2.html
+++ b/index2.html
@@ -124,7 +124,7 @@ im not gonna give up no matter how hard it is im gonna stand on my every words<b
 good night/good morning <br>
 you are the best<br>
 dont forget 10 bottles of water , eat well and sleeo 7+ <br>
-if you try to stay awake till midningth, dont forget this ghost is not innocent 😑, this black cat gonna remember as like you remember this "😑" and then...... <br>
+if you try to stay awake till midningth, dont forget this ghost is not innocent 😑, this black cat gonna remember as like you remember this "🤮" and then...... <br>
 😋😋😋😋😋😋😋😋😋😋😋😋<br>
 so i guess you gonna choose to sleep early right <br><br>
 else🤨🤨🤨🤨... i...😋😋😋😋<br><br><hr>good night my sweet potato😋<br><br> all the very best for your competetion do your best you are the best<br><br>
