--- a/index2.html
+++ b/index2.html
@@ -173,7 +173,7 @@ without permission im not gonna open any
 <hr>      
 <br>
 🤫🤫🤫🤫<br>
-im just putting here casully 😝😝😝 <br>    
+im just putting here casully for me only😝😝😝 <br>    
 i don't wanna overthink so im putting here 💁‍♂️<br>
 now im going to prepare well to my exams ,, 😊 and you also try to prepare well for your exams<br>
 so lets start study i also have exams in septemeber end<br>
