--- a/index2.html
+++ b/index2.html
@@ -177,7 +177,7 @@ im just putting here casully for me only😝😝😝 <br>
 i don't wanna overthink so im putting here 💁‍♂️<br>
 now im going to prepare well to my exams ,, 😊 and you also try to prepare well for your exams<br>
 so lets start study i also have exams in septemeber end<br>
-lets stydy well 😊 okay<br><br> 
+lets stydy well 😊 okay<br> just try to do best <br> i always pray for us to be the best😁<br><br> 
 if baka not possible <br>
  a choclate/watermelon/milkshake 24h k or 12h k  is fine i'll adjust with that😇<br><br><br>
 
