--- a/index2.html
+++ b/index2.html
@@ -193,6 +193,10 @@ if baka not possible <br>
  if i did any uncomfortable<br>
 
 <br><br><hr>
+			   now time is 1:20 PM im gonna sit to study <br>
+			   <br> lets study dont forget to take breaks and rest okay<br>
+			   😁<br><br><br>
+			   
 
 
 <!--- end of pass--->
