--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
 
 <!-- begining of pass--->
 <br><br>
-
+how is your health now <br>
 
 <i>I know it's been 3 days sorry I don't always get phone.. they are strict with me .. to much rules to follow..🥺 please don't worry I am fine I will be fine 😊 I'm ur strong girl</i>
 <br>
