--- a/index2.html
+++ b/index2.html
@@ -196,6 +196,11 @@ if baka not possible <br>
 			   now time is 1:20 PM im gonna sit to study <br>
 			   <br> lets study dont forget to take breaks and rest okay<br>
 			   😁<br><br><br>
+			   <br>
+			   04-09-2023: 9:05pm <br>
+			   dont stay till midnigh sleep early okay<br>
+			   LYSM<br>
+			   good night<br>
 			   
 
 
