--- a/index2.html
+++ b/index2.html
@@ -201,6 +201,8 @@ if baka not possible <br>
 			   dont stay till midnigh sleep early okay<br>
 			   LYSM<br>
 			   good night<br>
+			   TC<br>
+			   please be safe <br>
 			   
 
 
