--- a/index2.html
+++ b/index2.html
@@ -203,6 +203,18 @@ if baka not possible <br>
 			   good night<br>
 			   TC<br>
 			   please be safe <br>
+			   <hr>
+			   <br>
+			   05-09-2023 : 4:10 AM<br>
+			   Happy teachers day 😊<br>
+			   a part sometimes you are more than a teacher to me<br>
+			   cz i listen to you, and you teached me a lot of things a lot like mother do.... <br>
+			   i do remember that you tried to teach me how to sing😆 its adorable, one and so many stories<br>
+			   am i your good student/listener MAM 😇😇<br>
+			   once again happy teachers day MAM <br>
+			   please be safe <br>
+			   LYSM 😇<br>
+			   kindly your idiot student 😁<br><br><br>
 			   
 
 
