--- a/index2.html
+++ b/index2.html
@@ -226,6 +226,9 @@ if baka not possible <br>
 			   now time is 1:20 PM im gonna sit to study <br>
 			   <br> lets study dont forget to take breaks and rest okay<br>
 			   😁<br><br><br>
+			   good night M'lady<br>
+			   wake and start a great day <br>
+			   please always be safe and sound <br><br>
 			   
 
 
