--- a/index2.html
+++ b/index2.html
@@ -28,6 +28,9 @@
 
 <!-- begining of pass--->
 <br><br>
+			   07-sep-2023 : 7:39 PM<br> MUSM <br>
+			   i guess due to exams its hard to get phone in strict rules, <br> prepare well for exams dont forget to take rest <br> all the best 😊
+			   <hr>
 <br>
 06-sep-2023: 8:04AM<br><br>
 its truly beautiful isn't it... when <b>he</b> said .....
