--- a/index2.html
+++ b/index2.html
@@ -28,6 +28,17 @@
 
 <!-- begining of pass--->
 <br><br>
+			   8-09-2023 : 9:11 PM <br>
+			   hey !!! how are you ?<br>
+			   hope you are well , it may cz exams are near right <br>
+			   do eat well sleep well and study well <br>
+			   😅 im holding my words here, i dont know i may write a book as far as im here to say <br>
+			   huh! since no wonder cz the only one i use to talk all the day is my potato <br>
+			   i maybe a mute kid now 😅😅😅 <br>  oiii Take care of yourself and be healthy and safe <br>
+			   Alysm<br> turn left good night <br>
+			   saranghae <br><br>
+			   <hr>
+			   
 			   07-sep-2023 : 7:39 PM<br> MUSM <br>
 			   i guess due to exams its hard to get phone in strict rules, <br> prepare well for exams dont forget to take rest <br> all the best 😊
 			   <hr>
