--- a/index2.html
+++ b/index2.html
@@ -28,6 +28,21 @@
 
 <!-- begining of pass--->
 <br><br>
+			   9-09-2023 : 7:34PM <br>
+			   saranghae 😊 Mitsuha <br> hope you are doing well.. and i always pray for you and us 😊.. while as im fasting today few tried to distract me.<br>
+			   but they lost you know i slept in class at 11am and got a dream that we are both now in a test and in dream its call like we are in phone call you said <br>
+			   we did it, we did well in this test on each other we both filled with happy tears <br>
+			   😤 😤 😤 my teacher come to my ears start singing 😤😤😤 she broke my dream in mid 😤😤😤 <br>
+			   huh!! keep it apart now after that i wish now for you to be well and we both to do well in our test from god<br>
+			   please be safe and take care well, all i can do is now is praying, you the one to make it come in true about your health and happiness 😊 <br> 
+			   so be healthy and stay strong, dont worry about exams you definitely gonna do best <br>
+			   and i wanna know about your compitition also <br>
+			   🙄 i guess you not getting phone right due to exams are near, <br>
+			   its okay, dont risk when you got phone then repond to me <br>
+			   Aiesteiru <br>
+			   please be safe and sound <br>
+
+			   <hr>
 			   8-09-2023 : 9:11 PM <br>
 			   hey !!! how are you ?<br>
 			   hope you are well , it may cz exams are near right <br>
