--- a/index2.html
+++ b/index2.html
@@ -28,6 +28,16 @@
 
 <!-- begining of pass--->
 <br><br>
+			10-sep-2023 : 2:35 PM <br>
+			   🙄 cz its sunday i thought i may get a message <br> 👉👈 <br>
+			   no worry its fine <br>
+			   and from tommorow your exams right so prepare well and do well <br>
+			   all the best your are the best always 😊 <br>
+			   so im not leaving as much here cz i thought if i go on leaving as many as para's it may become a book for you to complete and reply 😅<br>
+			   ALYSM <br>
+			   please be safe <br>
+			   my Hintata💝<br>
+			   <hr>
 			   9-09-2023 : 7:34PM <br>
 			   saranghae 😊 Mitsuha <br> hope you are doing well.. and i always pray for you and us 😊.. while as im fasting today few tried to distract me.<br>
 			   but they lost you know i slept in class at 11am and got a dream that we are both now in a test and in dream its call like we are in phone call you said <br>
