--- a/index2.html
+++ b/index2.html
@@ -28,6 +28,29 @@
 
 <!-- begining of pass--->
 <br><br>
+			   11-sep-2023 : 5:15AM <br>
+			   Mitsuha!!!<br>
+			   how are you? <br>
+			   hope you are well and be well okay <br>
+			   ^-^ <br>
+			   saranghae <br>
+			   oiii 🙄 you are really well right ? if you have chance first let me know this and about health also <br>
+			   👉👈 somw thoghts bothering like how you are, are you well, is everything okay.... <br>
+			   🙄 moreover sometimes my overthinking took me like this 👉👈<br>
+			   please be safe. always please be well. always please be safe and strong<br>
+			   sometimes my mind keep on thinking, how are you?.. are you fine...? how is your health?... <br>
+			   👉👈 please be safe okay,<br> i can't , imagine,... no..no,,<br>
+			   everything is fine right you are well and safe rigjt , just not getting phone due to stright rules only<br>
+			   🙄 sorry i took overthinking a little far enought to tear me up 👉👈<br>
+			   then i started praying, as many times when i overthink or some thoughts bother me up i started praying, and even now all i can do is having faith on god and praying for ... <br>
+			   please be safe <br> 
+			   ALYSM <br>
+			   always please be safe and sound <br>
+			   eat well sleep well, TC <br>
+			   all the best for your exams <br>
+			   please be safe maa.. LY <br>i cant imagine a life without you 👉👈 <br> please be safe <br>
+			   <hr>
+			   <br><br>
 			10-sep-2023 : 2:35 PM <br>
 			   🙄 cz its sunday i thought i may get a message <br> 👉👈 <br>
 			   no worry its fine <br>
