--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,5 @@
 
+
 <!---page 1 with link sheet and to acess nift material-->
 <!DOCTYPE html>
 <html>
@@ -330,6 +331,42 @@ its truly beautiful isn't it... when <b>he</b> said .....
 			   please be safe and strong <br>
 			   turn left good night😊
 			   <hr>
+               <br>
+             <i> 12-sep-2023 : 9:12PM </i> <br>
+             <br>
+             so hows your day going?... hope its going fine and mine also good <br>
+             😅 but a little like something.... <br>
+             🙄im hoping that you may send a message👉👈... <br>
+             ....<br>
+             huh!!!! gomen 😅 i got a little emotional again 🙄 <br>
+             <br>
+            oi you know today i clicked some to show you 😊 <br>
+            here those are 😊😊😊 <br>
+
+            <img src="potdesign1.jpg"/><br>
+            <img src="potdesign2.jpg"/><br>see this i clicked this in morning 😅 while i saw no one in the street while im in way to go to college <br>
+
+            <img src="ladynoironbook.jpg"/><br> see there is a ladybug in my notebook, she always staying there and saying me that <br>
+            your girl is always strong and fine dont worry dorky/idiot/insane😊<br><br>
+
+            <img src="nature 1.jpg"/><br>
+            <img src="nature 2.jpg"/><br>
+            <img src="nature 3.jpg"/><br>
+            <img src="nature 4.jpg"/><br>
+            <img src="nature 5.jpg"/><br>
+            i clicked those while im returning home that time climate was so beautiful cool and amazing and you know there is none in that station <br>
+            first i did some weird act then roam all flatform after a while i started listening to your songs <br>
+            then.. 👉👈 i cried a little 🙄... <br>
+            then people start coming i wipe out tears then i wore my mask and a cap <br>😅 im still the nerd shy towards others <br><br>
+
+            <img src="healf heart.jpg"/><br> Keep my half safe, happy, strong, healthy... please do well take care of it okay its so sensitive and iL it so much 😊<br><br>
+
+            now its 10:38PM so for now good night see you soon😊<br>
+            now im gonna a little prayer then meditation then sleep <br>
+            LY hny Good night <br>
+            mysweetpotato 😊<br>
+            <br>
+             <hr>
 
 <!--- end of pass--->
 
